@@ -10,6 +10,7 @@ Proj 6.1+, and PostgreSQL 15+.
  - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
  - #5610, Regression fix: Allow Nan and infinity again
           in ST_SetPoint (Regina Obe)
+ - #5627, Handling of EMPTY components in PiP check (Paul Ramsey)
 
 
 PostGIS 3.3.5
